--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <!-- Displaying Python variable in HTML -->
         <section>
             <h2>Homepage URL</h2>
-            <p>Visit our homepage at <a href="{{ url_for('index') }}">Homepage</a></p>
+            <p>Visit our homepage at <a href="https://HONGBAEKIM.github.io/eval_booker/">Homepage</a></p>
         </section>
     </main>
 
