--- a/index.html
+++ b/index.html
@@ -64,6 +64,24 @@
                     <option value="3">3days</option>
                 </select><br>
 
+                <!-- <label for="start_time" class="label-with-space">Desired start time:</label>
+                <select id="start_time" name="start_time" required>
+                    {% for hour in range(0, 24) %}
+                        {% for minute in ['00', '15', '30', '45'] %}
+                            <option value="{{ '{:02d}'.format(hour) }}:{{ minute }}">{{ '{:02d}'.format(hour) }}:{{ minute }}</option>
+                        {% endfor %}
+                    {% endfor %}
+                </select><br>
+
+                <label for="end_time" class="label-with-space">Desired end time:</label>
+                <select id="end_time" name="end_time" required>
+                    {% for hour in range(0, 24) %}
+                        {% for minute in ['00', '15', '30', '45'] %}
+                            <option value="{{ '{:02d}'.format(hour) }}:{{ minute }}">{{ '{:02d}'.format(hour) }}:{{ minute }}</option>
+                        {% endfor %}
+                    {% endfor %}
+                </select><br> -->
+
                 <label for="start_time" class="label-with-space">Desired start time:</label>
                 <select id="start_time" name="start_time" required>
                     {% for hour in range(0, 24) %}
@@ -81,6 +99,7 @@
                         {% endfor %}
                     {% endfor %}
                 </select><br>
+
 
                 <button type="submit">Submit</button>
             </form>
