--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
         <section>
             <h2>Input</h2>
-            <form action="{{ url_for('handle_form') }}" method="post" onsubmit="return validateTime()">
+            <form action="https://your-github-username.github.io/eval_booker/" method="post" onsubmit="return validateTime()">
                 <label for="user_id" class="label-with-space">ID:</label>
                 <input type="text" id="user_id" name="user_id" required><br>
                 
@@ -286,8 +286,6 @@
                     <option value="23:45">23:45</option>
                     <!-- Add other time options here -->
                 </select><br>
-
-
 
                 <button type="submit">Submit</button>
             </form>
