--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
         <section>
             <h2>Input</h2>
-            <form action="https://your-github-username.github.io/eval_booker/" method="post" onsubmit="return validateTime()">
+            <form action="https://your-heroku-app.herokuapp.com/api" method="post" onsubmit="return validateTime()">
                 <label for="user_id" class="label-with-space">ID:</label>
                 <input type="text" id="user_id" name="user_id" required><br>
                 
